# PlayBall

./: .gitignore  CMakeLists.txt  Readme.md
src/: basictype.h  gamewindow.cpp  gamewindow.h  main.cpp  simplegame.cpp  simplegame.h
src/entity/: aentity.cpp  aentity.h  entityfood.cpp  entityfood.h  player.cpp  player.h
src/interface/: icontrollable.h  ientity.h  igame.h  irenderable.h  ishape.h  iupdatable.h
src/network/: client.cpp  client.h  server.cpp  server.h
src/network/packet/: ipacket.cpp  ipacket.h
src/network/socket/: ioreader.cpp  ioreader.h
src/shape/: circular.cpp  circular.h  foodshape.cpp  foodshape.h
src/util/: debug.h  easygetset.h  point.h  rgbcolor.h
src/widget/: glwidget.cpp  glwidget.h
